# PiOpener

./: .gitignore  App.tsx  app.json  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: server.yml
.github/workflows/: server.yml
android/: settings.gradle
android/app/src/main/: AndroidManifest.xml
app/: .gitignore  app.json  index.tsx  lynx.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
app/android/app/: build.gradle
app/assert_src/: Untitled.blend
app/assets/: panel.glb  single_panel.mtl
app/ios/garage/: Info.plist
app/ios/garage.xcodeproj/: project.pbxproj
app/src/: garage.tsx
app/src/actions/: door.ts
app/src/app/: _layout.tsx  index.tsx  settings.tsx
app/src/components/: tw-theme.tsx
app/src/contants/: colors.ts
app/src/lib/: storage.ts
app/src/store/: settings.tsx  status.ts
assert_src/: Untitled.blend1  full_door.vox  single_panel.vox
docs/schematics/: schematics.typ
docs/schematics/circetz/: circuits.typ  component.typ  components.typ  labels.typ  lib.typ  utils.typ
docs/schematics/circetz/components/: amplifiers.typ  arrows.typ  capacitors.typ  diodes.typ  flipflops.typ  grounds-supplies.typ  impedors.typ  inductors.typ  logic-ports.typ  nodes.typ  sources.typ  (+3 more)
ios/: Podfile
ios/garage/: Info.plist
ios/garage.xcodeproj/: project.pbxproj
server/: Cargo.toml  config.example.toml
server/src/: config.rs  gpio.rs  main.rs
server/src/gpio/: mock_gpio.rs  mod.rs  raspi_gpio.rs
src/: App.tsx  garage.tsx
web/: package.json  pnpm-lock.yaml  rsbuild.config.ts
web/src/: App.tsx
(+5 files in other folders)
